# Capstone-2025

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  BA.bib  Dockerfile  Dockerfile.pgroll  FRONTEND_MIGRATION_PLAN.md  LICENSE  README.md  SETUP_GUIDE.md  STARTUP_GUIDE.md  app.py  capstone-papers.session.sql  config.py  docker-compose.yml  init.sql  init.sql.deprecated  keyword_generation_results.txt  pgroll.json  promtail-config.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.bat  run_tests.sh
.github/: pull_request_template.md
Notification/: HTML_generation.py  PubSub.py  SendMail.py  Test.html  html_generator.py  output.html  pubsub_ui.py
chroma_db/: chroma_ingest_papers.py  chroma_query_test.py  chroma_setup.py  chroma_vector_db.py  store_embeddings.py  tests_general_chroma.py
config/: settings.py
custom_logging/: __init__.py  agent_logger.py  api_logger.py  base.py  config.json  formatters.py  utils.py
database/: database_connection.py  papers_database_handler.py  projectpaper_database_handler.py  projects_database_handler.py
evaluation/: bertscore_evaluation.py  bm25_lexical_matching.py  evaluation.py  evaluation_dataset.py  keyword_based_evaluation.py  keyword_eval.py  keyword_generation_eval.py  recommendation_eval.py  semantic_keyword_eval.py
evaluations/: bibliography.bib  eval_agent_comparison.py  new_agent_manual_eval.py
frontend/: Dockerfile  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3.1_REVIEW.md  README.md  index.html  nginx.conf  nginx.conf.template  nginx.local.conf  nginx.prod.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
llm/: Agent.py  AgentVerifier.py  Embeddings.py  LLMDefinition.py  Prompting.py  Prompts.py  StategraphAgent.py  agent.py  agent_cli.py  feedback.py  feedbacktest.py  graph_cli.py  node_logger.py  state.py
llm_pydantic/: README.md  agent.py  agent_cli.py  graph_cli.py  state.py  tooling.py
logs/: app.log.jsonl
loki_config/: loki-config.yaml  promtail-config.yaml
migrations/: 01_initial_schema.json  02_add_log_history_flag_to_projects.json  02_add_user_id_to_projects.json  EXAMPLE.md  README.md
paper_handling/: PaperGet.py  database_handler.py  paper_handler.py  paper_handling_tests.py  paper_metadata_retriever.py  work_parse_utils.py
paper_ranking/: paper_ranker.py
pubsub/: pubsub_main.py  pubsub_params.py  temporary_llm_that_will_be_replaced_soon.py
scripts/: migrate.sh  migration_status.sh  new_migration.sh  startup.sh  (+1 more)
(+114 files in other folders)
